<resources>
    <string name="app_name">Playlists</string>

    <string name="today">TODAY</string>
    <string name="yesterday">YESTERDAY</string>
    <string name="formated_today">• Today</string>
    <string name="formated_yesterday">• Yesterday</string>

    <string name="no_internet_error">No Internet connection available</string>
    <string name="what_s_your_mobile_number">WHAT\'S YOUR  \nMOBILE NUMBER?</string>
    <string name="mobile_number">Mobile number</string>
    <string name="carrier_sms_charges_may_apply">Carrier SMS charges may apply</string>
    <string name="we_will_send_an_sms_message_to_verify_your_phone_number">we will send an SMS message to verify your phone number</string>
    <string name="failed_to_send_otp">Failed to send OTP</string>
    <string name="otp_sent">OTP sent</string>
    <string name="automatic_detection_of_otp_failed">Automatically detection of SMS Failed</string>
    <string name="otp_received_successfully">OTP received successfully</string>
    <string name="automatic_detection_otp_timed_out">Automatically detection of SMS Timed out</string>
    <string name="waiting_to_automatically_detect_an_sms_send_to">Waiting to automatically detect an SMS sent to: </string>
    <string name="verifying_otp">Verifying OTP</string>
    <string name="invalid_otp">Invalid Otp</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="user_verified_successfully">Verified successfully</string>
    <string name="need_permissions">Need Permissions</string>
    <string name="this_app_need_permissions_to_use_this_feature">This app needs permission to use this feature. You can grant them in Setting.</string>
    <string name="goto_settings">Goto Settings</string>
    <string name="required_permissions_are_rejected">Required permissions are rejected. You cannot proceed.</string>
    <string name="search">Search</string>
    <string name="give_your_playlist_a_name">Give your playlist a name</string>
    <string name="create">Create</string>
    <string name="setting_title">Settings</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="do_you_want_remove_all_the_offline_songs">This action will delete all the offline songs.</string>
    <string name="remove">Remove</string>
    <string name="offline_songs_deleted">Offline songs deleted.</string>
    <string name="upload">Upload</string>
    <string name="upload_your_own_video">upload your own video</string>
    <string name="download_playlist">Download Playlist</string>
    <string name="listen_to_your_playlist_while_offline">listen to your playlist while offline</string>
    <string name="download_using_cellular">Download Using Cellular</string>
    <string name="recommended_setting_off">Recommended Setting: Off</string>
    <string name="download_while_roaming">Download While Roaming</string>
    <string name="delete">Delete</string>
    <string name="delete_all_offline_videos">delete all offline videos</string>
    <string name="crossfade">Crossfade</string>
    <string name="allows_you_to_crossfade_between_songs">allows you to crossfade between songs</string>
    <string name="trending_title">Trending</string>
    <string name="trending_search_hint">Search</string>
    <string name="please_provide_video_title">Please enter the title</string>
    <string name="please_provide_video_description">Please enter the description</string>
    <string name="file_added_to_upload_queue">file added to upload queue</string>
    <string name="checking_pending_uploads">checking pending uploads</string>
    <string name="uploaded_successfully">uploaded successfully</string>
    <string name="network_error">Network Error</string>
    <string name="api_not_connected">Api not connected</string>
    <string name="playlist_title">Playlists</string>
    <string name="playlist_search_hint">Find in playlist</string>
    <string name="playlist_already_present_with_same_name">Playlist already present with same name!</string>
    <string name="do_you_want_to_remove_this_playlist_containing">This action will delete this playlist containing</string>
    <string name="create_playlist">Create playlist</string>
    <string name="ok">OK</string>
    <string name="community_guidelines">By submitting your videos, you acknowledge that you agree to our Terms of Service and Community Guidelines</string>
    <string name="copyright_policy">Please be sure not to violate other\'s Copyright or Privacy Rights.</string>
    <string name="thanks_msg_upon_uploading_own_video">Thank you for uploading. The video will be LIVE post admin review.</string>

</resources>
