<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="32dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_s_your_mobile_number"
                android:textSize="@dimen/textSizeHeadline5"
                android:textStyle="bold" />


            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/we_will_send_an_sms_message_to_verify_your_phone_number"
                android:textSize="@dimen/textSizeSubtitle1"
                android:textColor="@color/grayA" />

            <EditText
                android:id="@+id/ediText_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:layout_marginTop="16dp"
                android:hint="@string/mobile_number"
                android:maxLength="10"
                android:inputType="phone"
                android:imeOptions="actionDone"
                android:textColor="@color/grayC"
                android:background="@drawable/edittext_background_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_title" />

            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center"
                android:text="@string/carrier_sms_charges_may_apply"
                android:textSize="@dimen/textSizeCaption"
                android:textColor="@color/grayD" />

        </LinearLayout>

        <include
            android:id="@+id/progress"
            layout="@layout/layout_progress_bar_full_screen"/>

    </RelativeLayout>
</layout>