<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/master_navigation"
    app:startDestination="@+id/navigation_playlists">

    <fragment
        android:id="@+id/navigation_playlists"
        android:name="com.pheuture.playlists.playlist.PlaylistFragment"
        android:label="@string/playlist_title"
        tools:layout="@layout/fragment_playlist" >
        <action
            android:id="@+id/action_navigation_playlist_to_navigation_playlist_detail"
            app:destination="@id/navigation_playlist_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_playlist_detail"
        android:label=" "
        android:name="com.pheuture.playlists.playlist.detail.PlaylistDetailFragment"
        tools:layout="@layout/fragment_playlist_detail">
        <action
            android:id="@+id/action_navigation_playlist_detail_to_navigation_media"
            app:destination="@id/navigation_media"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_media"
        android:name="com.pheuture.playlists.media.MediaFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_media">
        <argument
            android:name="title"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_media_to_navigation_uploads"
            app:destination="@id/navigation_uploads" />
    </fragment>

    <fragment
        android:id="@+id/navigation_trending"
        android:name="com.pheuture.playlists.trending.TrendingFragment"
        android:label="@string/trending_title"
        tools:layout="@layout/fragment_trendings" >
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.pheuture.playlists.settings.SettingsFragment"
        android:label="@string/setting_title"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_navigation_uploads"
            app:destination="@id/navigation_uploads" />
    </fragment>

    <fragment
        android:id="@+id/navigation_uploads"
        android:name="com.pheuture.playlists.upload.UploadActivity"
        android:label="Upload"
        tools:layout="@layout/activity_upload" />

</navigation>